# mellea-skills-compiler

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  FAQ.md  IMPLEMENTATION_PLAN.md  README.md  _config.yml  mellea-skills-ui.sh  package-lock.json  package.json  pyproject.toml  zensical.toml
.claude/commands/: README.md  mellea-fy-artifacts.md  mellea-fy-behaviours.md  mellea-fy-classify.md  mellea-fy-deps.md  mellea-fy-fixtures.md  mellea-fy-generate.md  mellea-fy-inventory.md  mellea-fy-map.md  mellea-fy-repair.md  mellea-fy-validate.md  mellea-fy.md
.claude/data/: runtime_defaults.json
.claude/melleafy/writers/: config_writer.py  fixtures_writer.py
.claude/schemas/: README.md  config_emission.schema.json  inventory.schema.json  melleafy.schema.json  runtime_defaults.schema.json
.github/workflows/: docs.yml
docs/: API.md  CLI.md  CONCEPTS.md  CONTRIBUTING.md  EXAMPLES.md  EXPORTING.md  FAQs.md  FROM_STUBS_TO_RUNNING.md  INSTALLATION.md  NEXT_STEPS.md  QUICK_START.md  README.md  TUTORIAL.md
docs/dialects/: README.md  agent-skills-std.md  claude-code.md  crewai.md  hybrid.md  langgraph.md  letta.md  openclaw.md
examples/: README.md
examples/clawdefender/clawdefender_mellea/: README.md  SETUP.md  __init__.py  __main__.py  config.py  mapping_report.md  pipeline.py  schemas.py  tools.py
mellea-fy/: README.md
overrides/: home.html  main.html
skills/: README.md
skills/appdeploy/: spec.md
skills/checklist/: spec.md
skills/security-engineer/: spec.md
src/mellea_skills_compiler/: __init__.py  cli.py  enums.py  inference.py  models.py
tests/: README.md
tests/mellea_skills_compiler/: test_cli.py  test_type_checking.py
ui/: interactive-cli.js
(+156 files in other folders)
